--- a/Demo/CMakeLists.txt
+++ b/Demo/CMakeLists.txt
@@ -1,5 +1,5 @@
 find_package(OpenCV REQUIRED)
 
 file(GLOB SRCS Kernels/*.cpp)
-add_executable(demo demo.cpp ${SRCS})
+add_executable(demo demo.cpp ${SRCS} "Kernels/demo_FindContours.cpp")
 target_link_libraries(demo openvx_kernels ${OpenCV_LIBS})
